# yandex_backend-cpp_autumn_2022

./: .gitignore  .gitmodules
homeworks/homework_01/: README.md  openapi.yaml
homeworks/homework_01/configs/: config_vars_testing.yaml
homeworks/homework_02/: .gitlab-ci.yml  Makefile  docker-compose.yaml  readme.md
homeworks/homework_04/: README.md  gitlab-ci.yml
homeworks/homework_05/: CMakeLists.txt  Makefile  docker-compose.yml
homeworks/homework_06/: HomeWork.md  README.md  variants.md
homeworks/homework_07/: Makefile  README.md
homeworks/homework_08/: docker-compose.yml
homeworks/homework_09/: README.md
selection/contest/: CMakeLists.txt  main.cpp
selection/contest/A/: A.cpp  (+1 more)
selection/task/: .env.example  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile-gcc  Makefile  docker-compose.yml  pyproject.toml  setup.cfg  unit_test.py
selection/task/.build/: conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
selection/task/.run/: Run DB.run.xml  Run.run.xml
selection/task/db/: Dockerfile
selection/task/db/scripts/: 1_init.sql
selection/task/online_tests/: conftest.py  unit_test.py
selection/task/online_tests/app/: test_imports.py
selection/task/online_tests/int_tests/: test_delete_and_node.py  test_imports_and_node.py  test_imports_and_nodes.py  test_imports_and_sales.py
selection/task/online_tests/main/: test_node.py  test_nodes.py
selection/task/online_tests/tests_data/: static.py  utils.py
selection/task/src/: CMakeLists.txt  main.cpp
selection/task/src/database/: CMakeLists.txt  database.h  database_creator.h  databse_creator.cpp  pg_backend.cpp  pg_backend.h  pg_connection.cpp  pg_connection.h  status.h  test.cpp
selection/task/src/schemas/: CMakeLists.txt  base_schema.h  error_schema.h  system_item_import_request.cpp  system_item_import_request.h  system_item_import_schema.cpp  system_item_import_schema.h  system_item_schema.cpp  system_item_schema.h  system_item_type.h
selection/task/src/server/: CMakeLists.txt  server.cpp  server.h
selection/task/src/server/endpoints/: CMakeLists.txt  delete.cpp  delete.h  imports.cpp  imports.h  nodes.cpp  nodes.h
selection/task/src/utils/: CMakeLists.txt  dt_utils.cpp  dt_utils.h  validators.cpp  validators.h
selection/task/tests/: __init__.py  __main__.py  conftest.py  unit_test.py
selection/task/tests/int_tests/: test_delete_and_node.py  test_imports_and_node.py  test_imports_and_nodes.py  test_imports_and_sales.py
selection/task/tests/main/: test_delete.py  test_imports.py  test_node.py  test_nodes.py  test_sales.py
selection/task/tests/tests_data/: static.py
(+47 files in other folders)
